# tcc-ceds-ita

./: .gitignore  README.md  pipeline.py  pyproject.toml  setup_repository.sh
data/resultados_agregados/: estatisticas_principais.csv  linkage_distribuicao_scores.csv  linkage_por_ano.csv  linkage_top_municipios.csv  metadados_dados_agregados.md  relatorio_analise_final.md  resumo_analise.json  sih_por_ano.csv  sih_por_cid.csv  sih_top_municipios.csv  sim_por_ano.csv  sim_por_cid.csv  sim_top_municipios.csv  top_municipios.csv
notebooks/: 01_data_exploration.ipynb
pneumonia_analysis/: __init__.py  linkage.py  pipeline.py  sih_processor.py  sim_processor.py  utils.py
